--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: mdTranslator
 tagline:
 description:      Describe your website.
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url: http://adiwg.github.io/mdTranslator
+url: http://www.adiwg.org/mdTranslator
 #url: http://localhost:4000
 
 # Owner/author information
