--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,13 @@ rdoc
 spec/reports
 test/tmp
 test/version_tmp
+test/adiwgJson_full_test_example.json
+test/adiwgJson_min_test_example.json
+test/dev.rb
 tmp
 *.bundle
 *.so
 *.o
 *.a
 mkmf.log
+
