--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,9 @@ rdoc
 spec/reports
 test/tmp
 test/version_tmp
-test/adiwgJson_full_test_example.json
-test/adiwgJson_min_test_example.json
-test/adiwgJson_template.json
+test/mdJson_full_test_example.json
+test/mdJson_min_test_example.json
+test/mdJson_template.json
 test/dev.rb
 tmp
 *.bundle
