- added support of units of measure in 19110 writer - fixed issue and messaging when reader is missing or unknown - added messaging when writer is not requested or unknown - updated readme files for addition of 19110 writer - completed name changes of adiwgJson to mdJson - bumped version to 0.10.0

--- a/.gitignore
+++ b/.gitignore
@@ -13,12 +13,7 @@ lib/bundler/man
 pkg
 rdoc
 spec/reports
-test/tmp
-test/version_tmp
-test/mdJson_full_test_example.json
-test/mdJson_min_test_example.json
-test/mdJson_template.json
-test/dev.rb
+dev/
 tmp
 *.bundle
 *.so
