--- a/test/schemas/v1_0/.gitignore
+++ b/test/schemas/v1_0/.gitignore
@@ -1,4 +1,3 @@
-/.project
 *.gem
 *.rbc
 .bundle
@@ -13,11 +12,7 @@ lib/bundler/man
 pkg
 rdoc
 spec/reports
-dev
+test/tmp
+test/version_tmp
 tmp
-*.bundle
-*.so
-*.o
-*.a
-mkmf.log
-/.idea
+.project
