--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,8 @@ before_install: 'gem install bundler'
 rvm:
   - 2.1
   - 2.2
-  - 2.4
-  - jruby
   - ruby-head
   - jruby-head
 matrix:
   allow_failures:
-  - rvm: rbuy-head
+  - rvm: jruby-head
