--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ before_install: 'gem install bundler'
 rvm:
   - 2.1
   - 2.2
-  - 2.4
   - jruby
   - ruby-head
+matrix:
+  allow_failures:
+    - rvm: jruby
