--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ before_install: 'gem install bundler'
 rvm:
   - 2.1
   - 2.2
-  - jruby
+  - jruby-head
   - ruby-head
 matrix:
   allow_failures:
-    - rvm: jruby
+    - rvm: jruby-head
