Fix bug in ISO 19110 writer for when dictionary is empty or missing

--- a/lib/adiwg/mdtranslator/writers/iso19110/iso19110_writer_messages_eng.yml
+++ b/lib/adiwg/mdtranslator/writers/iso19110/iso19110_writer_messages_eng.yml
@@ -37,4 +37,5 @@ messageList:
    - {id: 100, message: "codeset domain name is missing"}
    - {id: 101, message: "unrepresented domain name is missing"}
 
-   - {id: 110, message: " is missing"}
+   - {id: 110, message: "data dictionary is empty"}
+   - {id: 111, message: "multiple data dictionaries found, using first"}
