--- a/lib/adiwg/mdtranslator/writers/iso19115_1/iso19115_1_writer_messages_eng.yml
+++ b/lib/adiwg/mdtranslator/writers/iso19115_1/iso19115_1_writer_messages_eng.yml
@@ -90,6 +90,7 @@ messageList:
    - {id: 290, message: "security constraint classification is missing"}
    - {id: 291, message: "legal constraint is missing when constraint type is 'legal'"}
    - {id: 292, message: "security constraint is missing when constraint type is 'security'"}
+   - {id: 293, message: "constraint type must be 'use', 'legal' or 'security'"}
 
    - {id: 300, message: "taxonomic level is missing"}
    - {id: 301, message: "taxonomic name is missing"}
