--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 .bundle
 .config
 .yardoc
-Gemfile.lock
 InstalledFiles
 _yardoc
 coverage
@@ -23,3 +22,4 @@ mkmf.log
 /.idea
 /.rake_tasks~
 vendor/
+*.DS_Store
